# PiwcsPrwModel

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: ClangTidy.cmake  Doxygen.cmake
docs/: pull_request_template.md
examples/: CMakeLists.txt  main.cpp
include/: PiwcsPrwModel  piwcsprwmodel.h
include/piwcsprwmodel/: algorithms.h  fwd.h  idmap.h  io.h  metadata.h  model.h  nodes.h  section.h  util.h
printer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  algorithms.cpp  correctness.cpp  correctness.h  data_model.cpp  debug.h  io.cpp  io_read.cpp  io_write.cpp  metadata.cpp  model.cpp  nodes.cpp  nodes.h  nodetypeinfo.h  printing.cpp  section.cpp  string_view_writer.h  util.cpp
test/: .clang-tidy  .model.cpp.kate-swp  CMakeLists.txt  completeness.cpp  correctness.cpp  data_model.cpp  io_read.cpp  io_wr.cpp  metadata.cpp  model.cpp  nodes.cpp  section.cpp
